Bug 161457 - Autofilter result is wrong when cells contain formatted rounded values
Summary: Autofilter result is wrong when cells contain formatted rounded values
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.8.0 target:24.2.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks: AutoFilter
  Show dependency treegraph
 
Reported: 2024-06-07 12:40 UTC by Kevin Suo
Modified: 2024-06-14 02:00 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
test doc (28.63 KB, application/vnd.oasis.opendocument.spreadsheet)
2024-06-07 12:40 UTC, Kevin Suo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2024-06-07 12:40:29 UTC
Created attachment 194587 [details]
test doc

THIS IS DEVASTATOR! Autofilter is useless for my daily work with this bug, it makes autofilter unreliable at all!

Steps to Reproduce:
1. Open the attached test document.
2. In column "COGS Account", deselect "R&D Expenditure" in the autofilter dropdown.
3. In column "Period", select "2021-01" only (i.e. deselect "2021-03").
4. Click the autofilter dropdown in column "Ending Value".

Expected Result:
The filtered result contains a "1.00" and a "0.00", thus both "1.00" and "0.00" should appear in the autofilter dropdown list.

Current Result:
Only "1.00" shows up in the dropdown. "0.00" is inactive and deselected.

This works in Version: 7.4.7 (when the "show inactive/hidden autofilter entries" feature was not added), but broken on master, build ID b860aea9d6f8ac46f6d2575ead25337495ec9a88. Also broken in version 7.6.7.
Comment 1 gladys 2024-06-07 13:13:16 UTC
HI Kevin ,

Thank you for reporting the bug.
 I can confirm that i can reproduce the bug in windows version: 
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 74185b8edf7f046a3372319da86a1d8ca0024c87
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: CL threaded.
Thank you
Comment 2 m_a_riosv 2024-06-07 13:20:27 UTC
ReproducibleVersion: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 6d39b1a6068bbbd5ca4947f668f989dbfb73342d
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

0.00 is not available to select.

Last working for me on which ones I have installed.
Version: 7.5.9.2 (X86_64) / LibreOffice Community
Build ID: cdeefe45c17511d326101eed8008ac4092f278a9
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded
Comment 3 Buovjaga 2024-06-07 16:09:26 UTC
Bibisected with linux-64-7.5 to 2d1df9f3dccc10f13b8585ad18afce1542ebc4d1
tdf#117276 sc: Show hidden filter elements as inactive elements
Comment 4 Commit Notification 2024-06-10 21:42:58 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/db153afbac7acc1ae46f78beef4221e9aad07305

tdf#161457 - Fix autofilter result is wrong when cells contain

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Balázs Varga 2024-06-11 07:52:33 UTC
> https://git.libreoffice.org/core/commit/
> db153afbac7acc1ae46f78beef4221e9aad07305

Maybe someone can double check (verify) if its really solved the issue, just to be sure, before backport to any earlier versions, please. :)
Comment 6 Xisco Faulí 2024-06-11 09:38:36 UTC
Verified in

Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 567dbcf68711402736f65f4a0a47ef57549fe50f
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Balázs Varga, thanks for fixing this issue!!
Comment 7 Commit Notification 2024-06-11 09:39:38 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/d23246f1a284f4d4f2c10af60e77ce1a424fd599

tdf#161457 - Fix autofilter result is wrong when cells contain

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.