tdf#161457 - Fix autofilter result is wrong when cells contain

formatted rounded values.

Filtered formatted values were not sorted with the rounded values
but with the original values and the duplicated values caused wrong
filter results.

Regression from commit: 2d1df9f3dccc10f13b8585ad18afce1542ebc4d1
(tdf#117276 sc: Show hidden filter elements as inactive elements)

Change-Id: I7540ba5fa98e6bbe0b014448bf2449432261d542
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168592
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
(cherry picked from commit db153afbac7acc1ae46f78beef4221e9aad07305)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168620
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>